--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,7 +2,7 @@ html {
     height: 100%;
 }
 body {
-    background-color:rgba(214, 214, 214, 1);
+    background-color:#383838;
     color: #212121;
     height: 100%;
     font-family: "Montserrat";
@@ -49,7 +49,7 @@ hr {
 }
 
 .landing {
-    background: rgba(214, 214, 214, 1);
+    /*background: rgba(214, 214, 214, 1);*/
     padding: 20px;
     margin-left: 0 !important;
     height: 100%;
