--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -22,11 +22,11 @@
         </div>
         <div class="menu">
             <div class="row">
-                <div class="col-md-2 col-md-offset-1"><a href="https://timedupchingu.herokuapp.com/" target="_blank" class="btn btn-default">Visit the App</a></div>
-                <div class="col-md-2"><a href="#work" class="btn btn-default">How does it work?</a></div>
-                <div class="col-md-2"><a href="https://slack.com/oauth/authorize?&client_id=148707815554.153426475878&scope=commands,team:read,channels:history,channels:read,groups:read" target="_blank" class="btn btn-default">Add to Slack!</a></div>
-                <div class="col-md-2"><a href="#slash" class="btn btn-default">Slash Commands</a></div>
-                <div class="col-md-2"><a href="#contact" class="btn btn-default">Contact</a></div>
+                <div class="col-xs-2 col-xs-offset-1"><a href="https://timedupchingu.herokuapp.com/" target="_blank" class="btn btn-default">Visit the App</a></div>
+                <div class="col-xs-2"><a href="#work" class="btn btn-default">How does it work?</a></div>
+                <div class="col-xs-2"><a href="https://slack.com/oauth/authorize?&client_id=148707815554.153426475878&scope=commands,team:read,channels:history,channels:read,groups:read" target="_blank" class="btn btn-default">Add to Slack!</a></div>
+                <div class="col-xs-2"><a href="#slash" class="btn btn-default">Slash Commands</a></div>
+                <div class="col-xs-2"><a href="#contact" class="btn btn-default">Contact</a></div>
             </div>
         </div>
         <div class="main">
