--- a/public/stylesheets/splash.css
+++ b/public/stylesheets/splash.css
@@ -21,24 +21,27 @@ body {
     margin-top: 0;
 }
 
-.menu .col-md-3{
-    text-align: center;
+.menu a{
+    margin: 5px;
 }
 
 .menu {
-    background: inherit;
+    background: rgba(214,214,214,1);
     z-index: 9999;
     width: 100%;
     height: 100px;
-    padding: 30px;
+    /*padding: 60px;*/
     margin-bottom: -100px;
     /*border-top: 1px solid grey;*/
-    border-bottom: 1px solid grey;
-    padding: 12px;
-    position: relative;
+    /*border-bottom: 1px solid grey;*/
+    border-radius: 1em;
+    /*padding: 12px;*/
+    /*position: relative;*/
 }
 
 .menu .btn {
+    width: 90%;
+    margin-top: 10%;
     -webkit-box-shadow: 0px 3px 11px 0px rgba(50, 50, 50, 0.52);
     -moz-box-shadow:    0px 3px 11px 0px rgba(50, 50, 50, 0.52);
     box-shadow:         0px 3px 11px 0px rgba(50, 50, 50, 0.52);
@@ -46,11 +49,11 @@ body {
 
 .menu-scrolled {
     background: rgba(214,214,214,1);
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
+    border-radius: 0;
     position: fixed;
     top: 0;
-    width: 68.5%;
+    left: 0;
+    width: 100%;
 }
 .header {
     width: 100%;
