--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -42,19 +42,10 @@
                 </div>
             </div>
         </nav>
-        <!--<div class="menu">
-            <div class="row">
-                <div class="col-xs-2 col-xs-offset-1"><a href="https://timedupchingu.herokuapp.com/" target="_blank" class="btn btn-default">Visit the App</a></div>
-                <div class="col-xs-2"><a href="#work" class="btn btn-default">How does it work?</a></div>
-                <div class="col-xs-2"><a href="https://slack.com/oauth/authorize?&client_id=148707815554.153426475878&scope=commands,team:read,channels:history,channels:read,groups:read" target="_blank" class="btn btn-default">Add to Slack!</a></div>
-                <div class="col-xs-2"><a href="#slash" class="btn btn-default">Slash Commands</a></div>
-                <div class="col-xs-2"><a href="#contact" class="btn btn-default">Contact</a></div>
-            </div>
-        </div>-->
         <div class="main">
             
             <div class="beginning">
-                <h2 class="text-center"><strong>Time coordination just got trivial!</strong></h2>
+                <h2 class="text-center"><strong>Time coordination in no time!</strong></h2>
                 <div class="beg">
                     <p>
                         With Timed-Up you can find the best time for a meeting between your team members 
