--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,20 +1,17 @@
-html {
+html, body {
+    min-height: 100% !important;
     height: 100%;
 }
 body {
     background-color:#383838;
     color: #212121;
-    height: 100%;
     font-family: "Montserrat";
 }
 
 .mainrow{
-    /*background-color:#2196F3;*/
-    /*background: black;*/
-    height: 100%;
-    /*padding: 3% 5%;*/
     padding: 0;
     margin: 0;
+    height: 100%!important;
     width: 100%;
 }
 
@@ -40,10 +37,6 @@ body {
     color: #212121 !important;
 }
 
-.instructions {
-    width: 90%;
-}
-
 hr {
     border-color: black;
 }
@@ -52,7 +45,7 @@ hr {
     /*background: rgba(214, 214, 214, 1);*/
     padding: 20px;
     margin-left: 0 !important;
-    height: 100%;
+    height: 100% !important;
     /*border-radius: 0.5em;*/
     background: -moz-radial-gradient(center, ellipse cover, rgba(214,214,214,1) 0%, rgba(168,168,168,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(214,214,214,1)), color-stop(100%, rgba(168,168,168,1))); /* safari4+,chrome */
@@ -113,7 +106,7 @@ li {
 
 .maintab {
     margin-top: 10px;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .mtab, .inctab {
@@ -178,7 +171,7 @@ h5:not(.activenow) {
 #popupbox {
     position:absolute;
     width: 90%;
-    min-height: 60px;
+    min-height: 50px;
     background: rgba(241, 249, 248, 1);
     z-index: 9999;
     -webkit-box-shadow: 0px 3px 11px 0px rgba(50, 50, 50, 0.52);
