changing deploy method

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
                 <hr>
                 <button>LOGIN</button>
                 <h4> You don't have an account? <span id="register" class="btn btn-default">Sign Up</span> or 
-                <a href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=148707815554.153399673990&redirect_uri=https%3A%2F%2Ftimedupchingu.herokuapp.com%2Fauth%2Fslack"><img alt="Sign in with Slack" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
+                <a href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=148707815554.153399673990&redirect_uri=https%3A%2F%2Ftimedup.herokuapp.com%2Fauth%2Fslack"><img alt="Sign in with Slack" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
                 </h4>
             </form>
         </div>
