--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,7 +43,7 @@
                 <button>REGISTER</button>
                 <hr>
                 <h4>Already have an account? <span id="login" class="btn btn-default">Login</span> or 
-                <a href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=148707815554.153399673990&redirect_uri=https%3A%2F%2Ftimedupchingu.herokuapp.com%2Fauth%2Fslack"><img alt="Sign in with Slack" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
+                <a href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=148707815554.153399673990&redirect_uri=https%3A%2F%2Ftimedup.herokuapp.com%2Fauth%2Fslack"><img alt="Sign in with Slack" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
                 </h4>
             </form>
         </div>
